--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "eslint-config-xo-react": "^0.23.0",
+    "eslint-plugin-jest": "^23.18.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "ts-jest": "^26.1.3",
+    "typescript": "^3.9.7",
+    "xo": "^0.32.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,8 +29,26 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "xo": {
+    "extends": [
+      "xo-react",
+      "plugin:jest/recommended"
+    ],
+    "prettier": true,
+    "globals": [
+      "window",
+      "document"
+    ],
+    "rules": {
+      "import/no-unassigned-import": [
+        "error",
+        {
+          "allow": [
+            "*/*.css"
+          ]
+        }
+      ]
+    }
   },
   "browserslist": {
     "production": [
