--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/uuid": "^8.0.0",
+    "delay": "^4.4.0",
     "eslint-config-xo-react": "^0.23.0",
     "eslint-plugin-jest": "^23.18.0",
     "eslint-plugin-prettier": "^3.1.4",
@@ -18,9 +20,11 @@
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-query": "^2.5.6",
     "react-scripts": "3.4.1",
     "ts-jest": "^26.1.3",
     "typescript": "^3.9.7",
+    "uuid": "^8.2.0",
     "xo": "^0.32.1"
   },
   "scripts": {
@@ -37,7 +41,8 @@
     "prettier": true,
     "globals": [
       "window",
-      "document"
+      "document",
+      "localStorage"
     ],
     "rules": {
       "import/no-unassigned-import": [
