--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.5",
     "@types/uuid": "^8.0.0",
     "delay": "^4.4.0",
     "eslint-config-xo-react": "^0.23.0",
@@ -17,10 +18,16 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
+    "i18next": "^19.6.3",
+    "i18next-browser-languagedetector": "^5.0.0",
+    "i18next-http-backend": "^1.0.17",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.7.0",
     "react-query": "^2.5.6",
+    "react-query-devtools": "^2.3.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "ts-jest": "^26.1.3",
     "typescript": "^3.9.7",
@@ -49,7 +56,8 @@
         "error",
         {
           "allow": [
-            "*/*.css"
+            "**/*.css",
+            "src/i18n"
           ]
         }
       ]
