--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/markdown-it": "^10.0.1",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-datepicker": "^3.1.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/uuid": "^8.0.0",
@@ -21,14 +23,18 @@
     "i18next": "^19.6.3",
     "i18next-browser-languagedetector": "^5.0.0",
     "i18next-http-backend": "^1.0.17",
+    "markdown-it": "^11.0.0",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.7.0",
+    "react-markdown-editor-lite": "^1.2.1",
     "react-query": "^2.5.6",
     "react-query-devtools": "^2.3.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "slugify": "^1.4.4",
     "ts-jest": "^26.1.3",
     "typescript": "^3.9.7",
     "uuid": "^8.2.0",
