--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/classnames": "^2.2.10",
     "@types/jest": "^24.0.0",
     "@types/markdown-it": "^10.0.1",
     "@types/node": "^12.0.0",
@@ -14,6 +15,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/uuid": "^8.0.0",
+    "classnames": "^2.2.6",
     "delay": "^4.4.0",
     "eslint-config-xo-react": "^0.23.0",
     "eslint-plugin-jest": "^23.18.0",
@@ -24,6 +26,8 @@
     "i18next-browser-languagedetector": "^5.0.0",
     "i18next-http-backend": "^1.0.17",
     "markdown-it": "^11.0.0",
+    "node-sass": "^4.14.1",
+    "normalize.css": "^8.0.1",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-datepicker": "^3.1.3",
@@ -63,6 +67,7 @@
         {
           "allow": [
             "**/*.css",
+            "**/*.scss",
             "src/i18n"
           ]
         }
