--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.7.0",
+    "react-markdown": "^4.3.1",
     "react-markdown-editor-lite": "^1.2.1",
     "react-query": "^2.5.6",
     "react-query-devtools": "^2.3.2",
