--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slido-zadanie-events",
+  "name": "events-assignment",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
